Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 <div>
                     <h1 id="user-name">Phil Longworth</h1>
-                    <p id="bio">Freelance </p>
+                    <p id="bio">FREELANCE</p>
                     <p id="email">👉 phil@phillongworth.co.uk</p>
                     <p id=""Phone">👉 07930 756072</p> 
                     <a href="https://www.linkedin.com/in/phil-longworth-13051220/" target="_blank">👉 <strong>Linkedin</strong></a>
@@ -183,5 +183,6 @@
     
     
 </html>
+
 
 
