First edits vi Nginx

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img id="profile-pic" src="./assets/images/phillongworth.jpg" alt="Phil Longworth">
 
                 <div>
-                    <h1 id="user-name">Phil Longworth round trip test</h1>
+                    <h1 id="user-name">Phil Longworth</h1>
                     <p id="bio">Freelance</p>
                     <p id="email">👉 phil@phillongworth.co.uk</p>
                     <p id=""Phone">👉 07930 756072</p> 
@@ -166,9 +166,9 @@
     Major projects
 
             <ul>
-            <li><p><a href="project1.html">Project 1</a>
+            <li><p><a href="project1.html">Kirklees Health and Wellbeing Strategy</a>
             </p></li>
-            <li><p><a href='project-2.html'>Project 2</a>
+            <li><p><a href='project-2.html'>Kirklees Healthy Working Life Programme</a>
             </p></li>
             </div>
     </body>
