--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -7,7 +6,7 @@
         <title>Phil Longworth</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./styles/main.css">
+        <link rel="stylesheet" href="assets/style.css">
     </head>
     <body>
         <div id="container--main">
