--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Phil Longworth</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="assets/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="container--main">
